[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/screens/player_computer/WindowedStylebox.tres" type="StyleBox" id=1]
[ext_resource path="res://sprites/screens/player_computer/window/Close.png" type="Texture" id=2]
[ext_resource path="res://src/screens/player_computer/WindowPanel.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=2]
antialiased = false
font_path = "res://fonts/TinyUnicode.ttf"

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = -5
extra_spacing_bottom = -1
font_data = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 59, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.501961, 0.501961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="WindowPanel" type="Control"]
margin_right = 121.0
margin_bottom = 83.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 121.0
margin_bottom = 83.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Panel"]
margin_top = -15.0
margin_right = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Button" parent="Panel/Center"]
margin_left = 44.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 12.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
text = "Window"

[node name="HeaderArea" type="Area2D" parent="Panel"]
position = Vector2( -0.999992, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/HeaderArea"]
position = Vector2( 61, -6 )
shape = SubResource( 4 )

[node name="CloseArea" type="Area2D" parent="Panel"]
position = Vector2( 113, -7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Panel/CloseArea"]
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/CloseArea"]
shape = SubResource( 5 )

[node name="Cover" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Panel/HeaderArea" to="." method="_on_HeaderArea_body_entered"]
[connection signal="body_exited" from="Panel/HeaderArea" to="." method="_on_HeaderArea_body_exited"]
[connection signal="body_entered" from="Panel/CloseArea" to="." method="_on_CloseArea_body_entered"]
[connection signal="body_exited" from="Panel/CloseArea" to="." method="_on_CloseArea_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
